--- a/Ds402MotionControl/CMakeLists.txt
+++ b/Ds402MotionControl/CMakeLists.txt
@@ -5,8 +5,8 @@
 add_yarp_device(
     NAME Ds402MotionControl
     TYPE yarp::dev::Ds402MotionControl
-    SOURCES Ds402MotionControl.cpp
-    PUBLIC_HEADERS Ds402MotionControl.h
+    SOURCES Ds402MotionControl.cpp Cia402StateMachine.cpp
+    PUBLIC_HEADERS Ds402MotionControl.h Cia402StateMachine.h
     PUBLIC_LINK_LIBRARIES
       YARP::YARP_os
       YARP::YARP_dev
