Add Rename ds402 into CiA402

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_application(
-    NAME Ds402MotionControlTest
+    NAME CiA402MotionControlTest
     SOURCES main.cpp
     LINK_LIBRARIES  ${YARP_LIBRARIES})
