--- a/CiA402MotionControl/CMakeLists.txt
+++ b/CiA402MotionControl/CMakeLists.txt
@@ -6,7 +6,7 @@ add_yarp_device(
     NAME CiA402MotionControl
     TYPE yarp::dev::CiA402MotionControl
     SOURCES CiA402MotionControl.cpp CiA402StateMachine.cpp EthercatManager.cpp
-    PUBLIC_HEADERS CiA402MotionControl.h CiA402StateMachine.h EthercatManager.h
+    PUBLIC_HEADERS CiA402MotionControl.h CiA402StateMachine.h EthercatManager.h LogComponent.h
     PUBLIC_LINK_LIBRARIES
       YARP::YARP_os
       YARP::YARP_dev
