Refactor CMake configuration: update library names and adjust subdirectory includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,6 @@ add_subdirectory(src)
 add_subdirectory(utils)
 add_subdirectory(device)
 
-add_subdirectory(test)
+# add_subdirectory(test)
 
 include(AddUninstallTarget)
