--- a/src/CiA402/CMakeLists.txt
+++ b/src/CiA402/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_cia402_library(
-    NAME CiA402  
+    NAME EthercatManager  
     SOURCES src/EthercatManager.cpp
-    PUBLIC_HEADERS include/CiA402/EthercatManager.h
+    PUBLIC_HEADERS include/CiA402/EthercatManager.h include/CiA402/LogComponent.h
     PUBLIC_LINK_LIBRARIES soem
 )
