--- a/utils/StoreHomePosition/CMakeLists.txt
+++ b/utils/StoreHomePosition/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_application(
-    NAME StoreHomePosition
+    NAME yarp-CiA402-store-home-position
     SOURCES src/main.cpp src/StoreHomePosition.cpp
     HEADERS include/StoreHomePosition/StoreHomePosition.h
-    LINK_LIBRARIES CiA402::CiA402 YARP::YARP_os YARP::YARP_dev)
+    LINK_LIBRARIES CiA402::EthercatManager YARP::YARP_os YARP::YARP_dev)
