Update PUBLIC_LINK_LIBRARIES in CMakeLists.txt to include YARP::YARP_os

--- a/src/CiA402/CMakeLists.txt
+++ b/src/CiA402/CMakeLists.txt
@@ -2,5 +2,5 @@ add_cia402_library(
     NAME EthercatManager  
     SOURCES src/EthercatManager.cpp
     PUBLIC_HEADERS include/CiA402/EthercatManager.h include/CiA402/LogComponent.h
-    PUBLIC_LINK_LIBRARIES soem
+    PUBLIC_LINK_LIBRARIES soem YARP::YARP_os 
 )
