--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 cmake_minimum_required(VERSION 3.8...3.30)
 project(
-    yarp-cia402                               # project name
+    YarpCiA402                                # project name
     VERSION 0.4.0                             # bump as you tag releases
     DESCRIPTION "YARP device plugin for EtherCAT CiA402 drives"
     LANGUAGES CXX
