Updated package name to  be consistent with the <package> option of yarp_configure_plugins (#47)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ project(
 )
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) # to avoid the use of $ORIGIN in RPATH
+
 #set default build type to "Release" in single-config generators
 if(NOT CMAKE_CONFIGURATION_TYPES)
     if(NOT CMAKE_BUILD_TYPE)
